vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__types__tests__type_missing_definition.snap
---
source: vhdl_syntax/src/parser/productions/types.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
type state_t is ;

== tree ==
FullTypeDeclaration
  Keyword(Type)
  Identifier 'state_t'
  Keyword(Is)
  SemiColon

== diagnostics ==
1:16 expected 'range', 'access', 'protected', 'file', 'array', 'record' or '('
