vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__types__tests__type_missing_is.snap
---
source: vhdl_syntax/src/parser/productions/types.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
type state_t (idle, running, done);

== tree ==
FullTypeDeclaration
  Keyword(Type)
  Identifier 'state_t'
  EnumerationTypeDefinition
    LeftPar
    EnumerationList
      Identifier 'idle'
      Comma
      Identifier 'running'
      Comma
      Identifier 'done'
    RightPar
  SemiColon

== diagnostics ==
1:13 expected 'is'
